Fix cover photo stretch problem (for real this time)

--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -6,6 +6,7 @@
   overflow: hidden;
   margin: auto;
   cursor: pointer;
+  object-fit: cover;
 }
 
 .gray-page-button {
